--- a/src/media.css
+++ b/src/media.css
@@ -1,66 +1,91 @@
-@media (max-width: 1220px) {
-  html {
-    font-size: 55%;
+@media (max-width: 680px) {
+  .menu-bar {
+    display: flex;
+  }
+  .navbar-list {
+    display: none;
+  }
+
+  .nav-icons {
+    display: none;
+  }
+
+  .header {
+    padding: 1rem;
+    justify-content: space-between;
+  }
+
+  .logo-header {
+    font-size: 2rem;
+  }
+
+  .logo {
+    height: 4rem;
+    width: 4rem;
+  }
+
+  .hero {
+    height: 30rem;
+  }
+  .hero-container {
+    top: 6rem;
+    width: 60%;
+    right: 3rem;
+    padding: 2rem;
+  }
+
+  .hero-new {
+    font-size: 1rem;
+  }
+  .hero-header {
+    font-size: 2rem;
+    width: 100%;
+  }
+  .hero-text {
+    font-size: 1rem;
+  }
+  .hero-button {
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
   }
 }
 
-@media (max-width: 1100px) {
-  html {
-    font-size: 50%;
-  }
-}
-@media (max-width: 980px) {
-  html {
-    font-size: 45%;
-  }
-}
-@media (max-width: 650px) {
-  html {
-    font-size: 30%;
-  }
-}
-@media (max-width: 490px) {
-  html {
-    font-size: 20%;
-  }
-}
 @media (max-width: 330px) {
-  html {
-    font-size: 15%;
+  .hero-header {
+    font-size: 1.8rem;
+  }
+  .hero-text {
+    font-size: 0.8rem;
   }
 
-  .products-image {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+  .hero-container {
+    top: 3rem;
   }
 
-  .product-name {
-    font-size: 2.4rem;
-  }
-  .product-short-desc {
-    font-size: 2rem;
+  .shop-hero-container {
+    top: 30%;
+    left: 30%;
   }
 
-  .product-price {
-    font-size: 2.2rem;
+  .filter {
+    flex-direction: column;
+    padding: 0 1rem;
+  }
+  .filter-first-container {
+    font-size: 1.3rem;
+  }
+  .filter-first-container p {
+    padding-left: 2rem;
   }
 
-  .main-footer {
-    column-gap: 0rem;
+  .show-products input {
+    font-size: 1.2rem;
+  }
+  .show-products h3 {
+    font-size: 1.2rem;
   }
 
-  .footer-main-header {
-    font-size: 3.2rem;
-  }
-  footer h4 {
-    font-size: 2.4rem;
-  }
-
-  footer p {
-    font-size: 2rem;
-  }
-
-  .footer-input {
-    font-size: 1.6rem;
+  .sorting-input {
+    width: 100%;
   }
 }
