--- a/src/style.css
+++ b/src/style.css
@@ -30,21 +30,10 @@ ul.open {
   z-index: 999;
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
 .menu-bar {
   display: none;
   width: 8rem;
   height: 2rem;
-}
-
-.logo-container {
-  display: flex;
-  align-items: center;
 }
 
 .logo {
@@ -54,19 +43,6 @@ ul.open {
 
 .logo-header {
   font-size: 2.4rem;
-}
-
-.navbar-list {
-  display: flex;
-  list-style: none;
-  align-items: center;
-  gap: 3.2rem;
-  font-size: 1.6rem;
-  cursor: pointer;
-}
-
-.navbar-list li:hover {
-  color: #b88e2f;
 }
 
 .nav-icons {
@@ -129,52 +105,12 @@ ul.open {
   cursor: pointer;
 }
 
-.browse-range {
-  margin: 3.2rem 0 8rem 0;
-  text-align: center;
-}
-
-.browse-range-header {
-  font-size: 3.2rem;
-  text-transform: uppercase;
-  font-weight: 700;
-  margin-bottom: 2rem;
-}
-
-.browse-range-text {
-  font-size: 1.6rem;
-  margin-bottom: 1.5rem;
-}
-
 .browse-images {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: center;
   gap: 5rem;
   padding: 1rem 5rem;
-}
-
-.browse-image {
-  width: 100%;
-  height: 100%;
-}
-
-.image-name {
-  font-size: 2rem;
-  font-weight: 700;
-  margin-bottom: 8rem;
-}
-
-.products {
-  margin: 3.2rem 0;
-  text-align: center;
-}
-
-.products-header {
-  font-size: 3.2rem;
-  text-transform: capitalize;
-  margin: 4rem 0 3.2rem 0;
-  font-weight: 700;
 }
 
 .products-image {
@@ -185,23 +121,8 @@ ul.open {
   margin-bottom: 5rem;
 }
 
-.product-image {
-  width: 100%;
-  height: 70%;
-}
-
-.product {
-  position: relative;
-  cursor: pointer;
-}
 .product-details {
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  position: relative;
   background-color: #f4f5f7cc;
-  padding: 2rem 2rem;
 }
 
 .hovering-card {
@@ -209,69 +130,6 @@ ul.open {
   height: 100%;
   width: 100%;
   background-color: #3a3a3a50;
-}
-
-.hovering-button {
-  background-color: #ffffff;
-  color: #b88e2f;
-  padding: 1rem 1.6rem;
-  font-size: 1.6rem;
-  font-weight: 700;
-  border: none;
-  position: absolute;
-  top: 40%;
-  left: 25%;
-  text-transform: uppercase;
-}
-
-.hovering-icons {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  color: #fff;
-  position: absolute;
-  top: 55%;
-  font-size: 1.6rem;
-  padding-left: 2rem;
-}
-
-.hovering-icons p {
-  text-transform: capitalize;
-}
-
-.product-discount {
-  position: absolute;
-  top: 1rem;
-  right: 2rem;
-  background-color: #e97171;
-  border-radius: 50%;
-  color: #fff;
-  padding: 1.6rem 1rem;
-  font-size: 1.4rem;
-}
-
-.new {
-  background-color: #2ec1ac;
-}
-
-.product-name {
-  font-size: 1.8rem;
-  font-weight: 700;
-}
-
-.product-short-desc {
-  font-size: 1.4rem;
-  color: #898989;
-}
-
-.product-price {
-  font-size: 1.6rem;
-  font-weight: 700;
-}
-
-.products-button {
-  position: relative;
-  left: 45%;
 }
 
 .footer {
@@ -413,6 +271,7 @@ footer p {
 
 .sorting-input {
   padding: 1rem;
+  width: 10rem;
 }
 
 .brands {
@@ -424,182 +283,12 @@ footer p {
   gap: 1rem;
 }
 
-.brand {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.brand-icon {
-  font-size: 4.8rem;
-}
-
-.brand-main {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.brand-text {
-  font-size: 1.3rem;
-  color: #898989;
-}
-
-.product-nav {
-  background-color: #f9f1e7;
-  padding: 4rem 6rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-size: 1.4rem;
-}
-
-.product-nav h3 {
-  color: #9f9f9f;
-  font-weight: 400;
-  cursor: pointer;
-}
-
 main {
-  margin-bottom: 2rem;
-}
-
-.single-product {
-  padding: 2rem 6rem;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 6rem;
-  border-bottom: 1px solid #d9d9d9;
-  margin-bottom: 2rem;
-}
-
-.single-product-name {
-  border-left: 2px solid #9f9f9f;
-  padding-left: 2rem;
-}
-
-.single-product-img {
-  border-radius: 5px;
-  width: 80%;
-  height: 80%;
-}
-
-.main-details {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  border-bottom: 1px solid #9f9f9f;
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
-}
-
-.main-name {
-  font-size: 4rem;
-}
-
-.main-price {
-  font-size: 2rem;
-  color: #9f9f9f;
-}
-
-.main-desc {
-  width: 80%;
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-
-.main-size {
-  font-size: 1.4rem;
-  color: #9f9f9f;
-  font-weight: 400;
-}
-
-.colors {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  cursor: pointer;
-}
-
-.violet {
-  background-color: #816dfa;
-  height: 2rem;
-  width: 2rem;
-  border-radius: 50%;
-}
-.black {
-  background-color: #000;
-  height: 2rem;
-  width: 2rem;
-  border-radius: 50%;
-}
-.brown {
-  background-color: #b88e2f;
-  height: 2rem;
-  width: 2rem;
-  border-radius: 50%;
-}
-
-.main-links {
-  color: #9f9f9f;
-  font-weight: 400;
-  font-size: 1.2rem;
-  line-height: 3rem;
-}
-
-.share {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.share-icons {
-  color: #000;
-  display: flex;
-  gap: 1rem;
-  cursor: pointer;
-}
-
-.description {
-  border-bottom: 1px solid #d9d9d9;
-  padding-bottom: 2rem;
-}
-
-.product-description {
-  width: 70%;
-  margin: 0 auto;
-}
-
-.description-headers {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4rem;
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  color: #9f9f9f;
-  cursor: pointer;
-}
-
-.description-content {
-  font-size: 1.2rem;
-  line-height: 2rem;
-  color: #9f9f9f;
   margin-bottom: 2rem;
 }
 
 .active {
   color: #000;
-}
-
-.related-products {
-  padding-bottom: 4rem;
-}
-
-.related-header {
-  font-size: 3.2rem;
-  font-weight: 600;
-  text-align: center;
-  margin-bottom: 2rem;
 }
 
 @layer base {
@@ -614,16 +303,16 @@ main {
     --primary-foreground: 0 0% 98%;
     --secondary: 34, 62%, 95%;
     --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
+    --muted: 0 0% 63%;
+    --muted-foreground: 33 60% 94%;
+    --accent: 0, 0%, 23%;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 42 59% 45%;
     --input: 240 5.9% 90%;
     --ring: 240 10% 3.9%;
-    --chart-1: 12 76% 61%;
+    --chart-1: 0 0% 63%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
