--- a/src/style.css
+++ b/src/style.css
@@ -132,70 +132,11 @@ ul.open {
   background-color: #3a3a3a50;
 }
 
-.footer {
-  border-top: 1px solid #0000002b;
-  padding: 2rem 7.2rem;
-}
-
 .main-footer {
   display: grid;
-  align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 3rem;
   margin-bottom: 2rem;
-}
-
-.footer-main-header {
-  font-size: 2.4rem;
-  font-weight: 700;
-  margin-bottom: 2rem;
-}
-
-.footer-text {
-  color: #9f9f9f;
-  width: 70%;
-}
-
-.footer-input {
-  margin-top: 1rem;
-  outline: none;
-  border: none;
-  border-bottom: 1px solid #000;
-  padding-bottom: 0.5rem;
-  font-size: 1.4rem;
-}
-
-.button {
-  background: none;
-  margin-left: 1rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-.footer-input::placeholder {
-  color: #9f9f9f;
-  font-weight: 400;
-}
-
-footer h4 {
-  color: #9f9f9f;
-  font-size: 1.4rem;
-  font-weight: 700;
-  margin-bottom: 2rem;
-}
-
-footer p {
-  font-size: 1.4rem;
-  font-weight: 700;
-  cursor: pointer;
-  text-transform: capitalize;
-  margin-bottom: 2rem;
-}
-
-.bottom-footer {
-  border-top: 1px solid #0000002b;
-  padding-top: 2.4rem;
 }
 
 .shop-hero {
@@ -208,24 +149,10 @@ footer p {
   position: absolute;
   top: 40%;
   left: 45%;
-}
-
-.shop-hero-header {
-  font-size: 4.8rem;
-}
-
-.small-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 1rem;
-}
-
-.small-container p {
-  font-size: 1.6rem;
-}
-
-.small-container-shop {
-  font-weight: 300;
+  gap: 2rem;
 }
 
 .filter {
@@ -291,6 +218,10 @@ main {
   color: #000;
 }
 
+.cart-hero {
+  top: 10%;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -346,12 +277,3 @@ main {
     --chart-5: 340 75% 55%;
   }
 }
-
-/* @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-} */
